Add /count command

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-
-packages/*
-FoundryCommands/.vs/*
-FoundryCommands/obj/*
-FoundryCommands/bin/*
-Libraries/*.dll
-.vs/*
+/Packages
+/FoundryCommands/obj
+/FoundryCommands/bin
+/Libraries
+.vs
+/MigrationBackup
+/Libraries
+/publicized_assemblies
+/Licenses
+/AssemblyPublicizer.exe
+/License
